Add: Files and HTML for Favicon

--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!--Title-->
     <title>Central Zoo</title>
-</head>
-<body>
-    
-</body>
+
+    <!--Favicon-->
+    <link
+      rel="icon"
+      sizes="16x16"
+      href="assets/zoo-favicon/zoo-favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      sizes="32x32"
+      href="assets/zoo-favicon/zoo-favicon-32x32.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/zoo-favicon/zoo-apple-touch-icon-180x180.png"
+    />
+  </head>
+  <body></body>
 </html>
