--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!--Meta Tags-->
+    <meta name="description" content="A sample website for a Zoo. General information about the zoo and animals.">
+    <meta name="keywords" content="central zoo. zoo. animals. lion. giraffe. monkey. Dublin. Ireland">
+
     <!--Title-->
     <title>Central Zoo</title>
 
@@ -25,5 +29,7 @@
       href="assets/zoo-favicon/zoo-apple-touch-icon-180x180.png"
     />
   </head>
-  <body></body>
+  <body>
+
+  </body>
 </html>
