--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--Meta Tags-->
-    <meta name="description" content="A sample website for a Zoo. General information about the zoo and animals.">
-    <meta name="keywords" content="central zoo. zoo. animals. lion. giraffe. monkey. Dublin. Ireland">
+    <meta
+      name="description"
+      content="A sample website for a Zoo. General information about the zoo and animals."
+    />
+    <meta
+      name="keywords"
+      content="central zoo. zoo. animals. lion. giraffe. monkey. Dublin. Ireland"
+    />
 
     <!--Title-->
     <title>Central Zoo</title>
@@ -30,6 +36,13 @@
     />
   </head>
   <body>
+    <!--Header-->
+    <header>Header</header>
 
+    <!--Main-->
+    <main>Content</main>
+
+    <!--Footer-->
+    <footer>Footer</footer>
   </body>
 </html>
