--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       sizes="180x180"
       href="assets/zoo-favicon/zoo-apple-touch-icon-180x180.png"
     />
+
+    <!--CSS Stylesheet-->
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <!--Header-->
