--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
   </head>
   <body>
     <!--Header-->
-    <header>Header</header>
+    <header>
+      <a href="index.html">
+        <h1 id="logo">Central Zoo</h1>
+      </a>
+    </header>
 
     <!--Main-->
     <main>Content</main>
