--- a/index.html
+++ b/index.html
@@ -41,9 +41,19 @@
   <body>
     <!--Header-->
     <header>
+      <!--Title-->
       <a href="index.html">
         <h1 id="logo">Central Zoo</h1>
       </a>
+      <!--Navigation-->
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="">Animals</a></li>
+          <li><a href="">Gallery</a></li>
+          <li><a href="">Contact Us</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!--Main-->
