--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </a>
       <!--Navigation-->
       <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
+        <ul id="menu">
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="">Animals</a></li>
           <li><a href="">Gallery</a></li>
           <li><a href="">Contact Us</a></li>
