--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <h1 id="logo">Central Zoo</h1>
       </a>
       <!--Navigation-->
+      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <label for="nav-toggle" class="nav-toggle-label">X</label>
       <nav>
         <ul id="menu">
           <li><a href="index.html" class="active">Home</a></li>
