Style: Changed Background color + Media Query for Tablets

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
       <label for="nav-toggle" class="nav-toggle-label">X</label>
       <nav>
         <ul id="menu">
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="">Animals</a></li>
-          <li><a href="">Gallery</a></li>
-          <li><a href="">Contact Us</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
+          <li class="inactive"><a href="">Animals</a></li>
+          <li class="inactive"><a href="">Gallery</a></li>
+          <li class="inactive"><a href="">Contact Us</a></li>
         </ul>
       </nav>
     </header>
