--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
       </a>
       <!--Navigation-->
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label">X</label>
+      <label for="nav-toggle" class="nav-toggle-label"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
       <nav>
         <ul id="menu">
           <li class="active"><a href="index.html">Home</a></li>
@@ -62,6 +64,42 @@
     <main>Content</main>
 
     <!--Footer-->
-    <footer>Footer</footer>
+    <footer>
+      <ul>
+        <li>
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Facebook page (opens in a new tab)"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.twitter.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Twitter page (opens in a new tab)"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Youtube page (opens in a new tab)"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </li>
+      </ul>
+    </footer>
+
+    <!--Font Awesome Icons-->
+    <script
+      src="https://kit.fontawesome.com/d5c042cd51.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
