Style: Social media icons colored to match rest of palette

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <!--Footer-->
     <footer>
-      <ul>
+      <ul id="social-networks">
         <li>
           <a
             href="https://www.facebook.com/"
