Edit: Changed tags for navbar

--- a/contact-us.html
+++ b/contact-us.html
@@ -53,10 +53,10 @@
       ></label>
       <nav>
         <ul id="menu">
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="inactive"><a href="index.html">Home</a></li>
           <li class="inactive"><a href="animals.html">Animals</a></li>
           <li class="inactive"><a href="gallery.html">Gallery</a></li>
-          <li class="inactive"><a href="contact-us.html">Contact Us</a></li>
+          <li class="active"><a href="contact-us.html">Contact Us</a></li>
         </ul>
       </nav>
     </header>
