Add: Sections to main pages

--- a/animals.html
+++ b/animals.html
@@ -62,7 +62,11 @@
     </header>
 
     <!--Main-->
-    <main>Content</main>
+    <main>
+      <section id="lion-content"></section>
+      <section id="monkey-content"></section>
+      <section id="giraffe-content"></section>
+    </main>
 
     <!--Footer-->
     <footer>
