--- a/contact-us.html
+++ b/contact-us.html
@@ -62,7 +62,10 @@
     </header>
 
     <!--Main-->
-    <main>Content</main>
+    <main>
+      <section id="contact-form"></section>
+      <section id="contact-details"></section>
+    </main>
 
     <!--Footer-->
     <footer>
