--- a/gallery.html
+++ b/gallery.html
@@ -62,7 +62,10 @@
     </header>
 
     <!--Main-->
-    <main>Content</main>
+    <main>
+      <section id="gallery-video"></section>
+      <section id="gallery-photos"></section>
+    </main>
 
     <!--Footer-->
     <footer>
