--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
     </header>
 
     <!--Main-->
-    <main>Content</main>
+    <main>
+      <section id="general-info"></section>
+      <section id="opening-times"></section>
+      <section id="map"></section>
+    </main>
 
     <!--Footer-->
     <footer>
