Add: Initial general info

--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
 
     <!--Main-->
     <main>
-      <section id="general-info"></section>
+      <section id="general-info">
+        <div>
+          <h2 id="general-head">General Info</h2>
+          <p id="general-text">
+            Welcome to our website! Here you will find all the information you
+            need about our zoo and the animals we have. <br />
+          </p>
+        </div>
+      </section>
       <section id="opening-times"></section>
       <section id="map"></section>
     </main>
