Edit: general info text

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
           <p id="general-text">
             Welcome to our website! Here you will find all the information you
             need about our zoo and the animals we have. <br />
+            On this page you will find our <b>opening times</b> and a <b>map</b> to help plan your visit. <br />
+            If you would like you can check our <b>Animals</b> section to learn about the type of animals at our zoo. <br />
+            <hr>
+            If you have any other issues or concerns please go to our <b>Contact Us</b> section to get in touch! 
           </p>
         </div>
       </section>
