Add: Initial opening times list

--- a/index.html
+++ b/index.html
@@ -78,7 +78,21 @@
           </p>
         </div>
       </section>
-      <section id="opening-times"></section>
+
+      <section id="opening-times">
+        <div>
+            <h2>Opening Hours</h2>
+            <p>
+                <ul>
+                    <li>Monday: 9.00am - 5.00pm</li>
+                    <li>Tuesday: 9.30am - 5.30pm</li>
+                    <li>Wednesday: 10.00am - 4.00pm</li>
+                    <li>Thursday/Friday: 9.00am - 6.00pm</li>
+                    <li>Saturday/Sunday: 9.00am - 8.00pm</li>
+                </ul>
+            </p>
+        </div>
+      </section>
       <section id="map"></section>
     </main>
 
