--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@
             </p>
         </div>
       </section>
-      <section id="map"></section>
+
+      <section id="map">
+        <div>
+            <h2>Map</h2>
+            <img>
+        </div>
+      </section>
     </main>
 
     <!--Footer-->
