Style: General Home page styling

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </header>
 
     <!--Main-->
-    <main>
+    <main id="main-home">
       <section id="general-info">
         <div>
           <h2 id="general-head">General Info</h2>
@@ -81,9 +81,9 @@
 
       <section id="opening-times">
         <div>
-            <h2>Opening Hours</h2>
+            <h2 id="times-head">Opening Hours</h2>
             <p>
-                <ul>
+                <ul id="times-ul">
                     <li>Monday: 9.00am - 5.00pm</li>
                     <li>Tuesday: 9.30am - 5.30pm</li>
                     <li>Wednesday: 10.00am - 4.00pm</li>
