Add: Initial layout to Animal page

--- a/animals.html
+++ b/animals.html
@@ -63,9 +63,26 @@
 
     <!--Main-->
     <main>
-      <section id="lion-content"></section>
-      <section id="monkey-content"></section>
-      <section id="giraffe-content"></section>
+      <section id="animal-content">
+        <div id="animal-nav">
+          <nav>
+            <ul>
+              <li><a href="#lion-content">Lion</a></li>
+              <li><a href="#monkey-content">Monkey</a></li>
+              <li><a href="#giraffe-content">Giraffe</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div id="lion-content">
+          <h2>Lion</h2>
+        </div>
+        <div id="monkey-content">
+          <h2>Monkey</h2>
+        </div>
+        <div id="giraffe-content">
+          <h2>Giraffe</h2>
+        </div>
+      </section>
     </main>
 
     <!--Footer-->
