Add: Animal photos

--- a/animals.html
+++ b/animals.html
@@ -75,12 +75,27 @@
         </div>
         <div id="lion-content">
           <h2>Lion</h2>
+          <img
+            class="animal-photo"
+            src="./assets/images/lion-1.jpg"
+            alt="Picture of a Lion."
+          />
         </div>
         <div id="monkey-content">
           <h2>Monkey</h2>
+          <img
+            class="animal-photo"
+            src="./assets/images/orangutan-1.jpg"
+            alt="Picture of an Orangutan."
+          />
         </div>
         <div id="giraffe-content">
           <h2>Giraffe</h2>
+          <img
+            class="animal-photo"
+            src="./assets/images/giraffe-1.jpg"
+            alt="Picture of a Giraffe."
+          />
         </div>
       </section>
     </main>
