--- a/animals.html
+++ b/animals.html
@@ -65,14 +65,13 @@
     <main>
       <section id="animal-content">
         <div id="animal-nav">
-          <nav>
-            <ul>
-              <li><a href="#lion-content">Lion</a></li>
-              <li><a href="#monkey-content">Monkey</a></li>
-              <li><a href="#giraffe-content">Giraffe</a></li>
-            </ul>
-          </nav>
+          <ul>
+            <li><a href="#lion-content">Lion</a></li>
+            <li><a href="#monkey-content">Monkey</a></li>
+            <li><a href="#giraffe-content">Giraffe</a></li>
+          </ul>
         </div>
+
         <div id="lion-content">
           <h2>Lion</h2>
           <img
@@ -80,7 +79,16 @@
             src="./assets/images/lion-1.jpg"
             alt="Picture of a Lion."
           />
+          <p>
+            The lion (Panthera leo) is a large mammal of the Felidae (cat)
+            family. Some large males weigh over 250 kg (550 lb).[3] Today, wild
+            lions live in sub-Saharan Africa and western India.[4] Lions are
+            adapted for life in grasslands and mixed areas with trees and grass.
+            The relatively small females are fast runners over short distances,
+            and coordinate their hunting of herd animals.
+          </p>
         </div>
+
         <div id="monkey-content">
           <h2>Monkey</h2>
           <img
@@ -88,7 +96,15 @@
             src="./assets/images/orangutan-1.jpg"
             alt="Picture of an Orangutan."
           />
+          <p>
+            Orangutans (Pongo) are great apes belonging to the rainforests of
+            Indonesia and Malaysia. There are two species of orangutan. They are
+            from Southeast Asia. There are very few of them left, because loss
+            of the jungle has reduced their habitat. There are orangutans on
+            view at the Singapore zoo.
+          </p>
         </div>
+
         <div id="giraffe-content">
           <h2>Giraffe</h2>
           <img
@@ -96,6 +112,11 @@
             src="./assets/images/giraffe-1.jpg"
             alt="Picture of a Giraffe."
           />
+          <p>
+            A giraffe (Giraffa camelopardalis) is a mammal which lives in
+            Africa. Giraffes have an even number of toes and are the tallest
+            land animals. Giraffes and Okapi are the family Giraffidae.
+          </p>
         </div>
       </section>
     </main>
