Edit: Change form code

--- a/contact-us.html
+++ b/contact-us.html
@@ -64,7 +64,11 @@
     <!--Main-->
     <main>
       <section id="contact">
-        <form id="contact-form" method="POST" action="./thank-you.html">
+        <form
+          id="contact-form"
+          method="POST"
+          action="https://kevinoh45tud.github.io/pp1_zoo_website/thank-you.html"
+        >
           <h2>Contact Us</h2>
 
           <label for="user-name">Name:</label>
@@ -97,10 +101,13 @@
           <br />
 
           <label for="query-text">Query Text:</label>
-          <textarea name="query-text" id="query-text" rows="5" cols="50">
-                Input your query here!
-            </textarea
-          >
+          <textarea
+            name="query-text"
+            id="query-text"
+            rows="5"
+            cols="50"
+            placeholder="Input your query here!"
+          ></textarea>
           <br />
 
           <button type="submit" class="submit-button">Submit</button>
