Add: Setup thank you page for form

--- a/contact-us.html
+++ b/contact-us.html
@@ -64,11 +64,7 @@
     <!--Main-->
     <main>
       <section id="contact">
-        <form
-          id="contact-form"
-          method="POST"
-          action="https://kevinoh45tud.github.io/pp1_zoo_website/thank-you.html"
-        >
+        <form id="contact-form" method="GET" action="/thank-you.html">
           <h2>Contact Us</h2>
 
           <label for="user-name">Name:</label>
@@ -110,7 +106,9 @@
           ></textarea>
           <br />
 
-          <button type="submit" class="submit-button">Submit</button>
+          <a href="thank-you.html">
+            <button type="submit" class="submit-button">Submit</button>
+          </a>
         </form>
       </section>
 
