--- a/thank-you.html
+++ b/thank-you.html
@@ -63,7 +63,16 @@
 
     <!--Main-->
     <main>
-      <section id="thankyou-main"></section>
+      <section id="thankyou-main">
+        <div>
+          <h2>Thank you for submitting a query!</h2>
+          <p>
+            We will be in touch shortly to answer your questions.
+            <br />
+            Feel free to return to the other sections of our website from here.
+          </p>
+        </div>
+      </section>
     </main>
 
     <!--Footer-->
