Style: Thank you page finish styling

--- a/thank-you.html
+++ b/thank-you.html
@@ -62,9 +62,9 @@
     </header>
 
     <!--Main-->
-    <main>
-      <section id="thankyou-main">
-        <div>
+    <main id="thankyou-main">
+      <section>
+        <div id="thankyou-div">
           <h2>Thank you for submitting a query!</h2>
           <p>
             We will be in touch shortly to answer your questions.
