--- a/gallery.html
+++ b/gallery.html
@@ -63,7 +63,20 @@
 
     <!--Main-->
     <main>
-      <section id="gallery-video"></section>
+      <section id="gallery-video">
+        <video
+          src="/assets/videos/orangutan-video.mp4"
+          width="100%"
+          height="50%"
+          controls
+          muted
+          loop
+          aria-label="Video of an Orangutan"
+        >
+          Your browser does not support this type of video.
+        </video>
+      </section>
+
       <section id="gallery-photos"></section>
     </main>
 
