Add: photos to gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -77,7 +77,38 @@
         </video>
       </section>
 
-      <section id="gallery-photos"></section>
+      <section id="gallery-photos">
+        <img
+          src="/assets/images/elephant-2.jpg"
+          alt="Picture of an Elephant"
+          id="animal-photo"
+        />
+        <img
+          src="/assets/images/panda-2.jpg"
+          alt="Picture of a Panda"
+          id="animal-photo"
+        />
+        <img
+          src="/assets/images/parrot-2.jpg"
+          alt="Picture of a Parrot"
+          id="animal-photo"
+        />
+        <img
+          src="/assets/images/rhino-2.jpg"
+          alt="Picture of a Rhino"
+          id="animal-photo"
+        />
+        <img
+          src="/assets/images/tiger-2.jpg"
+          alt="Picture of a Tiger"
+          id="animal-photo"
+        />
+        <img
+          src="/assets/images/zebra-2.jpg"
+          alt="Picture of a Zebra"
+          id="animal-photo"
+        />
+      </section>
     </main>
 
     <!--Footer-->
