Style: close to finish gallery page styling

--- a/gallery.html
+++ b/gallery.html
@@ -62,9 +62,10 @@
     </header>
 
     <!--Main-->
-    <main>
+    <main id="gallery-main">
       <section id="gallery-video">
         <video
+          id="animal-video"
           src="/assets/videos/orangutan-video.mp4"
           width="100%"
           height="50%"
