Edit: fix image/video filepath

--- a/gallery.html
+++ b/gallery.html
@@ -66,7 +66,7 @@
       <section id="gallery-video">
         <video
           id="animal-video"
-          src="/assets/videos/orangutan-video.mp4"
+          src="./assets/videos/orangutan-video.mp4"
           width="100%"
           height="50%"
           controls
@@ -80,32 +80,32 @@
 
       <section id="gallery-photos">
         <img
-          src="/assets/images/elephant-2.jpg"
+          src="./assets/images/elephant-2.jpg"
           alt="Picture of an Elephant"
           id="animal-photo"
         />
         <img
-          src="/assets/images/panda-2.jpg"
+          src="./assets/images/panda-2.jpg"
           alt="Picture of a Panda"
           id="animal-photo"
         />
         <img
-          src="/assets/images/parrot-2.jpg"
+          src="./assets/images/parrot-2.jpg"
           alt="Picture of a Parrot"
           id="animal-photo"
         />
         <img
-          src="/assets/images/rhino-2.jpg"
+          src="./assets/images/rhino-2.jpg"
           alt="Picture of a Rhino"
           id="animal-photo"
         />
         <img
-          src="/assets/images/tiger-2.jpg"
+          src="./assets/images/tiger-2.jpg"
           alt="Picture of a Tiger"
           id="animal-photo"
         />
         <img
-          src="/assets/images/zebra-2.jpg"
+          src="./assets/images/zebra-2.jpg"
           alt="Picture of a Zebra"
           id="animal-photo"
         />
