--- a/contact-us.html
+++ b/contact-us.html
@@ -62,7 +62,7 @@
     </header>
 
     <!--Main-->
-    <main>
+    <main id="contact-main">
       <section id="contact">
         <form id="contact-form" method="GET" action="/thank-you.html">
           <h2>Contact Us</h2>
@@ -112,7 +112,29 @@
         </form>
       </section>
 
-      <section id="contact-details"></section>
+      <section id="contact-details">
+        <div>
+          <h2>Contact Details</h2>
+          <br />
+
+          <h3>Phone:</h3>
+          <p>+353 (01) 234 5678</p>
+          <br />
+
+          <h3>Email:</h3>
+          <p>example@info.ie</p>
+          <br />
+
+          <h3>Address:</h3>
+          <p>
+            Central Zoo <br />
+            Pheonix Park <br />
+            Dublin 8 <br />
+            D08 AC98 <br />
+            Ireland
+          </p>
+        </div>
+      </section>
     </main>
 
     <!--Footer-->
