Style: contact page extra styling

--- a/contact-us.html
+++ b/contact-us.html
@@ -100,8 +100,8 @@
           <textarea
             name="query-text"
             id="query-text"
+            style="width: 100%"
             rows="5"
-            cols="50"
             placeholder="Input your query here!"
           ></textarea>
           <br />
