Edit: Replaced media files with lower size versions

--- a/contact-us.html
+++ b/contact-us.html
@@ -64,7 +64,7 @@
     <!--Main-->
     <main id="contact-main">
       <section id="contact">
-        <form id="contact-form" method="GET" action="/thank-you.html">
+        <form id="contact-form" method="GET" action="thank-you.html">
           <h2>Contact Us</h2>
 
           <label for="user-name">Name:</label>
