--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <section id="map">
         <div>
             <h2>Map</h2>
-            <img>
+            <img src="./assets/images/zoo-map.jpg" alt="Vector image of Zoo's map" id="zoo-map">
         </div>
       </section>
     </main>
