--- a/animals.html
+++ b/animals.html
@@ -77,13 +77,13 @@
         <div id="lion-all">
           <h2 class="animal-heading">Lion</h2>
 
-          <div id="lion-content">
+          <div class="animal-content">
             <img
               class="animal-photo"
               src="./assets/images/lion-1.jpg"
               alt="Picture of a Lion."
             />
-            <p>
+            <p class="animal-text">
               The lion (Panthera leo) is a large mammal of the Felidae (cat)
               family. Some large males weigh over 250 kg (550 lb).[3] Today,
               wild lions live in sub-Saharan Africa and western India.[4] Lions
@@ -95,15 +95,15 @@
         </div>
 
         <div id="monkey-all">
-          <h2 class="animal-heading">Monkey</h2>
+          <h2 class="animal-heading">Orangutan</h2>
 
-          <div id="monkey-content">
+          <div class="animal-content" id="monkey-content">
             <img
               class="animal-photo"
               src="./assets/images/orangutan-1.jpg"
               alt="Picture of an Orangutan."
             />
-            <p>
+            <p class="animal-text">
               Orangutans (Pongo) are great apes belonging to the rainforests of
               Indonesia and Malaysia. There are two species of orangutan. They
               are from Southeast Asia. There are very few of them left, because
@@ -116,13 +116,13 @@
         <div id="giraffe-all">
           <h2 class="animal-heading">Giraffe</h2>
 
-          <div id="giraffe-content">
+          <div class="animal-content">
             <img
               class="animal-photo"
               src="./assets/images/giraffe-1.jpg"
               alt="Picture of a Giraffe."
             />
-            <p>
+            <p class="animal-text">
               A giraffe (Giraffa camelopardalis) is a mammal which lives in
               Africa. Giraffes have an even number of toes and are the tallest
               land animals. Giraffes and Okapi are the family Giraffidae.
