Style: borders + home page

--- a/index.html
+++ b/index.html
@@ -62,16 +62,14 @@
 
     <!--Main-->
     <main id="main-home">
+      <div id="home-top">
       <section id="general-info">
         <div>
-          <h2 id="general-head">General Info</h2>
+          <h2 class="home-heading">General Info</h2>
           <p id="general-text">
-            Welcome to our website! Here you will find all the information you
-            need about our zoo and the animals we have. <br />
-            On this page you will find our <b>opening times</b> and a
-            <b>map</b> to help plan your visit. <br />
-            If you would like you can check our <b>Animals</b> section to learn
-            about the type of animals at our zoo. <br />
+            Welcome to our website! Here you will find all the information you need about our zoo and the animals we have. <br />
+            On this page you will find our <b>opening times</b> and a <b>map</b> to help plan your visit. <br />
+            If you would like you can check our <b>Animals</b> section to learn about the type of animals at our zoo. <br />
 
             If you have any other issues or concerns please go to our
             <b>Contact Us</b> section to get in touch!
@@ -81,7 +79,7 @@
 
       <section id="opening-times">
         <div>
-            <h2 id="times-head">Opening Hours</h2>
+            <h2 class="home-heading">Opening Hours</h2>
             <p>
                 <ul id="times-ul">
                     <li>Monday: 9.00am - 5.00pm</li>
@@ -93,10 +91,11 @@
             </p>
         </div>
       </section>
+      </div>
 
       <section id="map">
         <div>
-            <h2>Map</h2>
+            <h2 class="home-heading">Map</h2>
             <img src="./assets/images/zoo-map.jpg" alt="Vector image of Zoo's map" id="map-image">
         </div>
       </section>
