--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
       <label for="nav-toggle" class="nav-toggle-label"
         ><i class="fa-solid fa-bars"></i
-      ></label>
+      ><span class="sr-only">menu</span></label>
       <nav>
         <ul id="menu">
           <li class="active"><a href="index.html">Home</a></li>
