Style: initial form re-styling

--- a/contact-us.html
+++ b/contact-us.html
@@ -65,7 +65,7 @@
     <main id="contact-main">
       <section id="contact">
         <form id="contact-form" method="GET" action="thank-you.html">
-          <h2>Contact Us</h2>
+          <h2 class="contact-head">Contact Us</h2>
 
           <label for="user-name">Name:</label>
           <input
@@ -106,15 +106,13 @@
           ></textarea>
           <br />
 
-          <a href="thank-you.html">
-            <button type="submit" class="submit-button">Submit</button>
-          </a>
+          <button type="submit" class="submit-button">Submit</button>
         </form>
       </section>
 
       <section id="contact-details">
         <div>
-          <h2>Contact Details</h2>
+          <h2 class="contact-head">Contact Details</h2>
           <br />
 
           <h3>Phone:</h3>
