Edit: thank you page add anchor to home

--- a/thank-you.html
+++ b/thank-you.html
@@ -65,12 +65,13 @@
     <main id="thankyou-main">
       <section>
         <div id="thankyou-div">
-          <h2>Thank you for submitting a query!</h2>
-          <p>
+          <h2 id="thankyou-head">Thank you for submitting a query!</h2>
+          <p id="thankyou-text">
             We will be in touch shortly to answer your questions.
             <br />
             Feel free to return to the other sections of our website from here.
           </p>
+          <a href="index.html"> Return to home page </a>
         </div>
       </section>
     </main>
