Style: finish thank you page styling

--- a/thank-you.html
+++ b/thank-you.html
@@ -64,14 +64,14 @@
     <!--Main-->
     <main id="thankyou-main">
       <section>
-        <div id="thankyou-div">
+        <div>
           <h2 id="thankyou-head">Thank you for submitting a query!</h2>
           <p id="thankyou-text">
             We will be in touch shortly to answer your questions.
             <br />
             Feel free to return to the other sections of our website from here.
           </p>
-          <a href="index.html"> Return to home page </a>
+          <a href="index.html" id="thankyou-anchor"> Return to home page </a>
         </div>
       </section>
     </main>
