--- a/404.html
+++ b/404.html
@@ -65,13 +65,13 @@
     <main id="thankyou-main">
       <section>
         <div>
-          <h2 id="thankyou-head">Thank you for submitting a query!</h2>
+          <h2 id="thankyou-head">Oh no!</h2>
           <p id="thankyou-text">
-            We will be in touch shortly to answer your questions.
+            An issue has occured.
             <br />
-            Feel free to return to the other sections of our website from here.
+            Please return to the home page.
           </p>
-          <a href="home.html" id="thankyou-anchor"> Return to home page </a>
+          <a href="index.html" id="thankyou-anchor"> Return to home page </a>
         </div>
       </section>
     </main>
