Style: change name of thank you id names to extra

--- a/404.html
+++ b/404.html
@@ -62,16 +62,16 @@
     </header>
 
     <!--Main-->
-    <main id="thankyou-main">
+    <main id="extra-main">
       <section>
         <div>
-          <h2 id="thankyou-head">Oh no!</h2>
-          <p id="thankyou-text">
+          <h2 id="extra-head">Oh no!</h2>
+          <p id="extra-text">
             An issue has occured.
             <br />
             Please return to the home page.
           </p>
-          <a href="index.html" id="thankyou-anchor"> Return to home page </a>
+          <a href="index.html" id="extra-anchor"> Return to home page </a>
         </div>
       </section>
     </main>
