--- a/thank-you.html
+++ b/thank-you.html
@@ -62,16 +62,16 @@
     </header>
 
     <!--Main-->
-    <main id="thankyou-main">
+    <main id="extra-main">
       <section>
         <div>
-          <h2 id="thankyou-head">Thank you for submitting a query!</h2>
-          <p id="thankyou-text">
+          <h2 id="extra-head">Thank you for submitting a query!</h2>
+          <p id="extra-text">
             We will be in touch shortly to answer your questions.
             <br />
             Feel free to return to the other sections of our website from here.
           </p>
-          <a href="home.html" id="thankyou-anchor"> Return to home page </a>
+          <a href="index.html" id="extra-anchor"> Return to home page </a>
         </div>
       </section>
     </main>
