Style: media query contact page

--- a/contact-us.html
+++ b/contact-us.html
@@ -67,7 +67,7 @@
         <form id="contact-form" method="GET" action="thank-you.html">
           <h2 class="contact-head">Contact Us</h2>
 
-          <label for="user-name">Name:</label>
+          <label for="user-name" class="form-label">Name:</label>
           <input
             type="text"
             name="user-name"
@@ -77,7 +77,7 @@
           />
           <br />
 
-          <label for="user-email">Email:</label>
+          <label for="user-email" class="form-label">Email:</label>
           <input
             type="email"
             name="user-email"
@@ -87,7 +87,7 @@
           />
           <br />
 
-          <label for="query-category">Query Type:</label>
+          <label for="query-category" class="form-label">Query Type:</label>
           <select name="query-category" id="query-category">
             <option value="opening-hours">Opening Hours</option>
             <option value="prices">Prices</option>
@@ -96,7 +96,7 @@
           </select>
           <br />
 
-          <label for="query-text">Query Text:</label>
+          <label for="query-text" class="form-label">Query Text:</label>
           <textarea
             name="query-text"
             id="query-text"
