Style: top margin to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -99,16 +99,19 @@
           src="./assets/images/tiger-2.jpg"
           alt="Picture of a Tiger"
           id="animal-photo"
+          class="topmargin-gallery"
         />
         <img
           src="./assets/images/panda-2.jpg"
           alt="Picture of a Panda"
           id="animal-photo"
+          class="topmargin-gallery"
         />
         <img
           src="./assets/images/zebra-2.jpg"
           alt="Picture of a Zebra"
           id="animal-photo"
+          class="topmargin-gallery"
         />
       </section>
     </main>
