Edit: fix check toggle error for other pages

--- a/404.html
+++ b/404.html
@@ -50,7 +50,8 @@
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
       <label for="nav-toggle" class="nav-toggle-label"
         ><i class="fa-solid fa-bars"></i
-      ></label>
+        ><span class="sr-only">menu</span></label
+      >
       <nav>
         <ul id="menu">
           <li class="inactive"><a href="index.html">Home</a></li>
