--- a/404.html
+++ b/404.html
@@ -57,7 +57,7 @@
           <li class="inactive"><a href="index.html">Home</a></li>
           <li class="inactive"><a href="animals.html">Animals</a></li>
           <li class="inactive"><a href="gallery.html">Gallery</a></li>
-          <li class="active"><a href="contact-us.html">Contact Us</a></li>
+          <li class="inactive"><a href="contact-us.html">Contact Us</a></li>
         </ul>
       </nav>
     </header>
