--- a/animals.html
+++ b/animals.html
@@ -71,6 +71,13 @@
           <div class="animal-content">
             <img
               class="animal-photo"
+              srcset="
+                ./assets/images/lion-final/lion-480w.jpg   480w,
+                ./assets/images/lion-final/lion-960w.jpg   960w,
+                ./assets/images/lion-final/lion-1280w.jpg 1280w,
+                ./assets/images/lion-final/lion-1920w.jpg 1920w
+              "
+              sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px)1280px, 1920px"
               src="./assets/images/lion-1.jpg"
               alt="Picture of a Lion."
             />
