Edit: rest of animals page

--- a/animals.html
+++ b/animals.html
@@ -98,6 +98,13 @@
           <div class="animal-content" id="monkey-content">
             <img
               class="animal-photo"
+              srcset="
+                ./assets/images/monkey-final/orangutan-480w.jpg   480w,
+                ./assets/images/monkey-final/orangutan-960w.jpg   960w,
+                ./assets/images/monkey-final/orangutan-1280w.jpg 1280w,
+                ./assets/images/monkey-final/orangutan-1920w.jpg 1920w
+              "
+              sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px)1280px, 1920px"
               src="./assets/images/orangutan-1.jpg"
               alt="Picture of an Orangutan."
             />
@@ -117,6 +124,13 @@
           <div class="animal-content">
             <img
               class="animal-photo"
+              srcset="
+                ./assets/images/giraffe-final/giraffe-480w.jpg   480w,
+                ./assets/images/giraffe-final/giraffe-960w.jpg   960w,
+                ./assets/images/giraffe-final/giraffe-1280w.jpg 1280w,
+                ./assets/images/giraffe-final/giraffe-1920w.jpg 1920w
+              "
+              sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px)1280px, 1920px"
               src="./assets/images/giraffe-1.jpg"
               alt="Picture of a Giraffe."
             />
