Edit: gallery first 3

--- a/gallery.html
+++ b/gallery.html
@@ -81,34 +81,76 @@
 
       <section id="gallery-photos">
         <img
+          srcset="
+            ./assets/images/elephant-final/elephant-480w.jpg   480w,
+            ./assets/images/elephant-final/elephant-960w.jpg   960w,
+            ./assets/images/elephant-final/elephant-1280w.jpg 1280w,
+            ./assets/images/elephant-final/elephant-1920w.jpg 1920w
+          "
+          sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px)1280px, 1920px"
           src="./assets/images/elephant-2.jpg"
           alt="Picture of an Elephant"
           id="animal-photo"
         />
         <img
+          srcset="
+            ./assets/images/rhino-final/rhino-480w.jpg   480w,
+            ./assets/images/rhino-final/rhino-960w.jpg   960w,
+            ./assets/images/rhino-final/rhino-1280w.jpg 1280w,
+            ./assets/images/rhino-final/rhino-1920w.jpg 1920w
+          "
+          sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px)1280px, 1920px"
           src="./assets/images/rhino-2.jpg"
           alt="Picture of a Rhino"
           id="animal-photo"
         />
         <img
+          srcset="
+            ./assets/images/parrot-final/parrot-480w.jpg   480w,
+            ./assets/images/parrot-final/parrot-960w.jpg   960w,
+            ./assets/images/parrot-final/parrot-1280w.jpg 1280w,
+            ./assets/images/parrot-final/parrot-1920w.jpg 1920w
+          "
+          sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px)1280px, 1920px"
           src="./assets/images/parrot-2.jpg"
           alt="Picture of a Parrot"
           id="animal-photo"
         />
 
         <img
+          srcset="
+            ./assets/images/lion-final/lion-480w.jpg   480w,
+            ./assets/images/lion-final/lion-960w.jpg   960w,
+            ./assets/images/lion-final/lion-1280w.jpg 1280w,
+            ./assets/images/lion-final/lion-1920w.jpg 1920w
+          "
+          sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px)1280px, 1920px"
           src="./assets/images/tiger-2.jpg"
           alt="Picture of a Tiger"
           id="animal-photo"
           class="topmargin-gallery"
         />
         <img
+          srcset="
+            ./assets/images/lion-final/lion-480w.jpg   480w,
+            ./assets/images/lion-final/lion-960w.jpg   960w,
+            ./assets/images/lion-final/lion-1280w.jpg 1280w,
+            ./assets/images/lion-final/lion-1920w.jpg 1920w
+          "
+          sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px)1280px, 1920px"
           src="./assets/images/panda-2.jpg"
           alt="Picture of a Panda"
           id="animal-photo"
           class="topmargin-gallery"
         />
         <img
+          srcset="
+            ./assets/images/lion-final/lion-480w.jpg   480w,
+            ./assets/images/lion-final/lion-960w.jpg   960w,
+            ./assets/images/lion-final/lion-1280w.jpg 1280w,
+            ./assets/images/lion-final/lion-1920w.jpg 1920w
+          "
+          sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px)1280px, 1920px"
           src="./assets/images/zebra-2.jpg"
           alt="Picture of a Zebra"
           id="animal-photo"
