--- a/index.html
+++ b/index.html
@@ -100,7 +100,14 @@
         <div>
           <h2 class="home-heading">Map</h2>
           <img
-            src="./assets/images/zoo-map.jpg"
+            srcset="
+              ./assets/images/map-final/map-480w.jpg   480w,
+              ./assets/images/map-final/map-960w.jpg   960w,
+              ./assets/images/map-final/map-1280w.jpg 1280w,
+              ./assets/images/map-final/map-1920w.jpg 1920w
+            "
+            sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px)1280px, 1920px"
+            src="./assets/images/map-final/map-1920w.jpg"
             alt="Vector image of Zoo's map"
             id="map-image"
           />
