Edit: changed animals text

--- a/animals.html
+++ b/animals.html
@@ -82,12 +82,12 @@
               alt="Picture of a Lion."
             />
             <p class="animal-text">
-              The lion (Panthera leo) is a large mammal of the Felidae (cat)
-              family. Some large males weigh over 250 kg (550 lb).[3] Today,
-              wild lions live in sub-Saharan Africa and western India.[4] Lions
-              are adapted for life in grasslands and mixed areas with trees and
-              grass. The relatively small females are fast runners over short
-              distances, and coordinate their hunting of herd animals.
+              The lion is a large mammal of the Felidae family. Some large males
+              weigh over 250 kg. Today, wild lions live in sub-Saharan Africa
+              and western India. Lions are adapted for life in grasslands and
+              mixed areas with trees and grass. The relatively small females are
+              fast runners over short distances, and coordinate their hunting of
+              herd animals.
             </p>
           </div>
         </div>
@@ -109,7 +109,7 @@
               alt="Picture of an Orangutan."
             />
             <p class="animal-text">
-              Orangutans (Pongo) are great apes belonging to the rainforests of
+              Orangutans are great apes belonging to the rainforests of
               Indonesia and Malaysia. There are two species of orangutan. They
               are from Southeast Asia. There are very few of them left, because
               loss of the jungle has reduced their habitat. There are orangutans
@@ -135,9 +135,9 @@
               alt="Picture of a Giraffe."
             />
             <p class="animal-text">
-              A giraffe (Giraffa camelopardalis) is a mammal which lives in
-              Africa. Giraffes have an even number of toes and are the tallest
-              land animals. Giraffes and Okapi are the family Giraffidae.
+              A giraffe is a mammal which lives in Africa. Giraffes have an even
+              number of toes and are the tallest land animals. Giraffes and
+              Okapi are the family Giraffidae.
             </p>
           </div>
         </div>
