Edit: edit details on contact page

--- a/contact-us.html
+++ b/contact-us.html
@@ -121,7 +121,7 @@
           <br />
 
           <h3>Email:</h3>
-          <p>example@info.ie</p>
+          <p>info@centralzoo.ie</p>
           <br />
 
           <h3>Address:</h3>
