--- a/gallery.html
+++ b/gallery.html
@@ -64,12 +64,10 @@
 
     <!--Main-->
     <main id="gallery-main">
-      <section id="gallery-video">
+      <div id="gallery-video">
         <video
           id="animal-video"
           src="./assets/videos/orangutan-video.mp4"
-          width="100%"
-          height="50%"
           controls
           muted
           loop
@@ -77,9 +75,9 @@
         >
           Your browser does not support this type of video.
         </video>
-      </section>
+      </div>
 
-      <section id="gallery-photos">
+      <div id="gallery-photos">
         <img
           srcset="
             ./assets/images/elephant-final/elephant-480w.jpg   480w,
@@ -90,7 +88,7 @@
           sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, 1920px"
           src="./assets/images/elephant-final/elephant-1920w.jpg"
           alt="Picture of an Elephant"
-          id="animal-photo"
+          class="animal-photos"
         />
         <img
           srcset="
@@ -102,7 +100,7 @@
           sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, 1920px"
           src="./assets/images/rhino-final/rhino-1920w.jpg"
           alt="Picture of a Rhino"
-          id="animal-photo"
+          class="animal-photos"
         />
         <img
           srcset="
@@ -114,7 +112,7 @@
           sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, 1920px"
           src="./assets/images/parrot-final/parrot-1920w.jpg"
           alt="Picture of a Parrot"
-          id="animal-photo"
+          class="animal-photos"
         />
 
         <img
@@ -127,7 +125,7 @@
           sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, 1920px"
           src="./assets/images/tiger-final/tiger-1920w.jpg"
           alt="Picture of a Tiger"
-          id="animal-photo"
+          class="animal-photos"
           class="topmargin-gallery"
         />
         <img
@@ -140,7 +138,7 @@
           sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, 1920px"
           src="./assets/images/panda-final/panda-1920w.jpg"
           alt="Picture of a Panda"
-          id="animal-photo"
+          class="animal-photos"
           class="topmargin-gallery"
         />
         <img
@@ -153,10 +151,10 @@
           sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, 1920px"
           src="./assets/images/zebra-final/zebra-1920w.jpg"
           alt="Picture of a Zebra"
-          id="animal-photo"
+          class="animal-photos"
           class="topmargin-gallery"
         />
-      </section>
+      </div>
     </main>
 
     <!--Footer-->
