Edit: remove duplicate class attribute from gallery

--- a/gallery.html
+++ b/gallery.html
@@ -125,8 +125,7 @@
           sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, 1920px"
           src="./assets/images/tiger-final/tiger-1920w.jpg"
           alt="Picture of a Tiger"
-          class="animal-photos"
-          class="topmargin-gallery"
+          class="animal-photos topmargin-gallery"
         />
         <img
           srcset="
@@ -138,8 +137,7 @@
           sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, 1920px"
           src="./assets/images/panda-final/panda-1920w.jpg"
           alt="Picture of a Panda"
-          class="animal-photos"
-          class="topmargin-gallery"
+          class="animal-photos topmargin-gallery"
         />
         <img
           srcset="
@@ -151,8 +149,7 @@
           sizes="(max-width: 480px) 480px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, 1920px"
           src="./assets/images/zebra-final/zebra-1920w.jpg"
           alt="Picture of a Zebra"
-          class="animal-photos"
-          class="topmargin-gallery"
+          class="animal-photos topmargin-gallery"
         />
       </div>
     </main>
